tests/src/frontend/syntax/invalid/catch_parenthesis.sk
fun main(): String {
  try {
    a()
  } catch(e) {
    x
  }
}
